# clarityviz changelog

## 0.0.1

9/29/16

- initial commit

## 0.0.6

10/8/16

### Added
- graphdensity

### Improved
- made some bug fixes

# 0.1.0

3/17/17

### Improved
- changed from a more object oriented approach to a more scripting approach
- instead of using mainly csv's to store nodes and edges, it now uses networkx and graphml's

# 0.1.1

3/17/17

### Improved
- fixed imports by removing jupyter notebook inline stuff

# 0.1.2

4/17/17

### Added
- tractography.py - computing tensors

### Improved
- analysis.py - updated code to use new ndreg and new ndio

# 0.1.4

4/20/17 blaze it

### Improved
- fixed using float as list index issue in analysis.get_regions()
- added a few more print statements to track progress of pipeline

# 0.1.5

5/7/17

### Added
- added generate_scaled_centroids_graph to analysis.py

# 0.1.6

5/7/17

### Improved
- bugfixes

# 0.1.7

5/15/17

### Improved
- changed downsample() function in analysis.py to extract_bright_points() and added bp_percentile parameter.